--- a/app/templates/layout/base.html
+++ b/app/templates/layout/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Mediascape</title>
+    <title>{{ brand }}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,68 +15,93 @@
 </head>
 
 <style>
-body {
-    height: 100vh;
+    body {
     overflow-x: hidden;
-    padding-top: 55px;
-}
-.vh-100 {
-    height: 100vh;
-}
-.sidebar.collapse.show,
-.sidebar.collapse.show + .col {
-    transition: .18s linear;
-    left: 0;
-}
-.sidebar.collapse ,
-.sidebar.collapsing,
-.sidebar.collapsing + .col {
-    transition: .18s linear;
-    z-index: 1050;
-    left: -25%;
-    height: auto !important;
-}
+    }
+    #sidebar-wrapper {
+    min-height: 100vh;
+    margin-left: -15rem;
+    -webkit-transition: margin .25s ease-out;
+    -moz-transition: margin .25s ease-out;
+    -o-transition: margin .25s ease-out;
+    transition: margin .25s ease-out;
+    }
+    #sidebar-wrapper .sidebar-heading {
+    padding: 0.875rem 1.25rem;
+    font-size: 1.2rem;
+    }
+    #sidebar-wrapper .list-group {
+    width: 15rem;
+    }
+    #page-content-wrapper {
+    min-width: 100vw;
+    }
+    #wrapper.toggled #sidebar-wrapper {
+    margin-left: 0;
+    }
+    /* @media (min-width: 768px) { */
+    #sidebar-wrapper {
+        margin-left: 0;
+    }
+
+    #page-content-wrapper {
+        min-width: 0;
+        width: 100%;
+    }
+
+    #wrapper.toggled #sidebar-wrapper {
+        margin-left: -15rem;
+    }
+    /* } */
 </style>
 
 <body>
-    <div class="container-fluid fixed-top bg-dark py-3">
-        <div class="row">
-            <div class="col-sm-3 col-0 collapse sidebar">
-                <!-- spacer col -->
-            </div>
-            <div class="col px-3">
-                <!-- toggler -->
-                <a class="text-white" data-toggle="collapse" href="#" data-target=".collapse" role="button">
-                    <i class="fa fa-bars fa-lg"></i>
-                </a>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid">
-        <div class="row vh-100">
-            <div class="col-3 collapse sidebar bg-dark text-white px-0">
-                <ul class="nav flex-column flex-nowrap text-truncate navbar-dark bg-dark position-fixed pt-2 vh-100" id="sidebar">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Active</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Disabled</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col py-3">
-                <h3>Content..</h3>
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <div class="container-fluid">
+                <div class="row">
+                    <div class="col">
+                        <button class="btn btn-dark" id="menu-toggle"><i class="fa fa-user" style="color:#DDDDDD;"></i></button>
+                    </div>
+                    <div class="col">
+                        <h3 class="text-light">{{ brand }}</h3>
+                    </div>
+              </div>
+          </div>
+    </nav>
+    <div class="d-flex toggled" id="wrapper">
+        <!-- Sidebar -->
+        <div class="bg-light border-right" id="sidebar-wrapper">
+            <div class="list-group list-group-flush">
+                {% if user.is_authenticated %}
+                    <h5 class="list-group-item bg-light">{{ user.get_username }}</h5>
+                    <a href="#" class="list-group-item list-group-item-action bg-light">Notifications</a>
+                    <a href="#" class="list-group-item list-group-item-action bg-light">Comments</a>
+                    <a href="#" class="list-group-item list-group-item-action bg-light">Account</a>
+                    <a href="#" class="list-group-item list-group-item-action bg-light">Logout</a>
+                {% else %}
+                    <form action="">
+                        <input type="hidden" value="{{ request.get_full_path }}" name="next" />
+                        <button type="submit" class="list-group-item list-group-item-action bg-light">Login</button>
+                    </form>
+                {% endif %}
+                <a class="list-group-item bg-light disabled"></a>
             </div>
         </div>
+        <!-- content -->
+        <div id="page-content-wrapper" class="container-fluid">
+            {% block body %}{% endblock %}
+        </div>
     </div>
-
 </body>
+
+<!-- Menu Toggle Script -->
+<script>
+    $("#menu-toggle").click(function(e) {
+        e.preventDefault();
+        $("#wrapper").toggleClass("toggled");
+    });
+</script>
 
 </html>
 
