--- a/app/templates/layout/base.html
+++ b/app/templates/layout/base.html
@@ -16,28 +16,28 @@
 
 <style>
     body {
-    overflow-x: hidden;
+        overflow-x: hidden;
     }
     #sidebar-wrapper {
-    min-height: 100vh;
-    margin-left: -15rem;
-    -webkit-transition: margin .25s ease-out;
-    -moz-transition: margin .25s ease-out;
-    -o-transition: margin .25s ease-out;
-    transition: margin .25s ease-out;
+        min-height: 100vh;
+        margin-left: -15rem;
+        -webkit-transition: margin .25s ease-out;
+        -moz-transition: margin .25s ease-out;
+        -o-transition: margin .25s ease-out;
+        transition: margin .25s ease-out;
     }
     #sidebar-wrapper .sidebar-heading {
-    padding: 0.875rem 1.25rem;
-    font-size: 1.2rem;
+        padding: 0.875rem 1.25rem;
+        font-size: 1.2rem;
     }
     #sidebar-wrapper .list-group {
-    width: 15rem;
+        width: 15rem;
     }
     #page-content-wrapper {
-    min-width: 100vw;
+        min-width: 100vw;
     }
     #wrapper.toggled #sidebar-wrapper {
-    margin-left: 0;
+        margin-left: 0;
     }
     /* @media (min-width: 768px) { */
     #sidebar-wrapper {
@@ -57,14 +57,14 @@
 
 <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
           <div class="container-fluid">
                 <div class="row">
                     <div class="col">
-                        <button class="btn btn-dark" id="menu-toggle"><i class="fa fa-user" style="color:#DDDDDD;"></i></button>
+                        <button class="btn btn-primary " id="menu-toggle"><i class="fa fa-bars"></i></button>
                     </div>
                     <div class="col">
-                        <h3 class="text-light">{{ brand }}</h3>
+                        <h3><a class="text-light" href="{% url 'home:index' %}" style="text-decoration: none;">{{ brand }}</a></h3>
                     </div>
               </div>
           </div>
@@ -98,8 +98,8 @@
     </div>
 </body>
 
-<!-- Menu Toggle Script -->
 <script>
+    // sidebar toggle
     $("#menu-toggle").click(function(e) {
         e.preventDefault();
         $("#wrapper").toggleClass("toggled");
