--- a/app/home/templates/home/index.html
+++ b/app/home/templates/home/index.html
@@ -1,62 +1,7 @@
 {% extends "layout/base.html" %}
 
-{% block content %}
+{% block body %}
 
-    <h1>{{ brand }}</h1>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
-    <div>aaa</div>
+    <div>test</div>
 
 {% endblock %}
