--- a/app/books/templates/books/thread.html
+++ b/app/books/templates/books/thread.html
@@ -4,7 +4,7 @@
 <!-- thread header -->
 <div class="container-fluid">
     <div class="card border-secondary mt-5 mb-5">
-        <div class="card-header text-light bg-primary">
+        <div class="card-header text-light bg-dark">
             <h3>{{ book.title }} <small>by</small> {{ book.author }}</h3>
         </div>
         <div class="card-body">
