--- a/app/templates/layout/base.html
+++ b/app/templates/layout/base.html
@@ -57,11 +57,11 @@
 
 <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="container-fluid">
                 <div class="row">
                     <div class="col">
-                        <button class="btn btn-primary " id="menu-toggle"><i class="fa fa-bars"></i></button>
+                        <button class="btn btn-dark" id="menu-toggle"><i class="fa fa-bars"></i></button>
                     </div>
                     <div class="col">
                         <h3><a class="text-light" href="{% url 'home:index' %}" style="text-decoration: none;">{{ brand }}</a></h3>
