--- a/app/accounts/templates/accounts/signup.html
+++ b/app/accounts/templates/accounts/signup.html
@@ -4,7 +4,7 @@
 
 <div class="container d-flex h-75">
     <div class="card w-75 m-auto">
-        <div class="card-header text-light bg-primary text-center">
+        <div class="card-header text-light bg-dark text-center">
             <h3>Signup</h3>
         </div>
         <div class="card-body">
@@ -18,7 +18,7 @@
             <div class="container mt-4">
                 <div class="row">
                     <div class="col-sm">
-                        <button type="submit" form="signupform" class="w-50 btn btn-outline-primary btn-block mx-auto">Signup</button>
+                        <button type="submit" form="signupform" class="w-50 btn btn-outline-dark btn-block mx-auto">Signup</button>
                     </div>
                 </div>
             </div>
