--- a/app/accounts/templates/accounts/signup.html
+++ b/app/accounts/templates/accounts/signup.html
@@ -18,7 +18,8 @@
             <div class="container mt-4">
                 <div class="row">
                     <div class="col-sm">
-                        <button type="submit" form="signupform" class="w-50 btn btn-outline-dark btn-block mx-auto">Signup</button>
+                        <button type="submit" form="signupform"
+                            class="w-50 btn btn-outline-dark btn-block mx-auto">Signup</button>
                     </div>
                 </div>
             </div>
