--- a/app/accounts/templates/accounts/login.html
+++ b/app/accounts/templates/accounts/login.html
@@ -23,10 +23,12 @@
             <div class="container mt-4">
                 <div class="row">
                     <div class="col-sm">
-                        <button type="submit" form="loginform" class="w-50 btn btn-outline-dark btn-block mx-auto">Login</button>
+                        <button type="submit" form="loginform"
+                            class="w-50 btn btn-outline-dark btn-block mx-auto">Login</button>
                     </div>
                     <div class="col-sm">
-                        <button type="submit" form="signupform" class="w-50 btn btn-outline-dark btn-block mx-auto">Signup</button>
+                        <button type="submit" form="signupform"
+                            class="w-50 btn btn-outline-dark btn-block mx-auto">Signup</button>
                     </div>
                 </div>
             </div>
