--- a/app/templates/layout/base.html
+++ b/app/templates/layout/base.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>{{ brand }}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
     <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
@@ -18,6 +25,7 @@
     body {
         overflow-x: hidden;
     }
+
     #sidebar-wrapper {
         min-height: 100vh;
         margin-left: -15rem;
@@ -26,19 +34,24 @@
         -o-transition: margin .25s ease-out;
         transition: margin .25s ease-out;
     }
+
     #sidebar-wrapper .sidebar-heading {
         padding: 0.875rem 1.25rem;
         font-size: 1.2rem;
     }
+
     #sidebar-wrapper .list-group {
         width: 15rem;
     }
+
     #page-content-wrapper {
         min-width: 100vw;
     }
+
     #wrapper.toggled #sidebar-wrapper {
         margin-left: 0;
     }
+
     /* @media (min-width: 768px) { */
     #sidebar-wrapper {
         margin-left: 0;
@@ -52,41 +65,43 @@
     #wrapper.toggled #sidebar-wrapper {
         margin-left: -15rem;
     }
+
     /* } */
 </style>
 
 <body>
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <div class="container-fluid">
-                <div class="row">
-                    <div class="col">
-                        <button class="btn btn-dark" id="menu-toggle"><i class="fa fa-bars"></i></button>
-                    </div>
-                    <div class="col">
-                        <h3><a class="text-light" href="{% url 'home:index' %}" style="text-decoration: none;">{{ brand }}</a></h3>
-                    </div>
-              </div>
-          </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <button class="btn btn-dark" id="menu-toggle"><i class="fa fa-bars"></i></button>
+                </div>
+                <div class="col">
+                    <h3><a class="text-light" href="{% url 'home:index' %}"
+                            style="text-decoration: none;">{{ brand }}</a></h3>
+                </div>
+            </div>
+        </div>
     </nav>
     <div class="d-flex toggled" id="wrapper">
         <!-- Sidebar -->
         <div class="bg-light border-right" id="sidebar-wrapper">
             <div class="list-group list-group-flush">
                 {% if user.is_authenticated %}
-                    <h5 class="list-group-item bg-light">{{ user.get_username }}</h5>
-                    <a href="#" class="list-group-item list-group-item-action bg-light">Notifications</a>
-                    <a href="#" class="list-group-item list-group-item-action bg-light">Comments</a>
-                    <a href="#" class="list-group-item list-group-item-action bg-light">Account</a>
-                    <form action="{% url 'accounts:logout' %}">
-                        <input type="hidden" value="{{ request.get_full_path }}" name="next" />
-                        <button type="submit" class="list-group-item list-group-item-action bg-light">Logout</button>
-                    </form>
+                <h5 class="list-group-item bg-light">{{ user.get_username }}</h5>
+                <a href="#" class="list-group-item list-group-item-action bg-light">Notifications</a>
+                <a href="#" class="list-group-item list-group-item-action bg-light">Comments</a>
+                <a href="#" class="list-group-item list-group-item-action bg-light">Account</a>
+                <form action="{% url 'accounts:logout' %}">
+                    <input type="hidden" value="{{ request.get_full_path }}" name="next" />
+                    <button type="submit" class="list-group-item list-group-item-action bg-light">Logout</button>
+                </form>
                 {% else %}
-                    <form action="{% url 'accounts:login' %}">
-                        <input type="hidden" value="{{ request.get_full_path }}" name="next" />
-                        <button type="submit" class="list-group-item list-group-item-action bg-light">Login</button>
-                    </form>
+                <form action="{% url 'accounts:login' %}">
+                    <input type="hidden" value="{{ request.get_full_path }}" name="next" />
+                    <button type="submit" class="list-group-item list-group-item-action bg-light">Login</button>
+                </form>
                 {% endif %}
                 <a class="list-group-item bg-light disabled"></a>
             </div>
@@ -100,11 +115,10 @@
 
 <script>
     // sidebar toggle
-    $("#menu-toggle").click(function(e) {
+    $("#menu-toggle").click(function (e) {
         e.preventDefault();
         $("#wrapper").toggleClass("toggled");
     });
 </script>
 
 </html>
-
