finished up thread functionalities

--- a/app/books/templates/books/thread.html
+++ b/app/books/templates/books/thread.html
@@ -21,7 +21,8 @@
     </div>
 </div>
 
+
 <!-- comment section -->
-{% include "books/comment_section.html" %}
+{% include "books/thread_comment_section.html" %}
 
 {% endblock %}
