--- a/app/home/templates/home/index.html
+++ b/app/home/templates/home/index.html
@@ -33,9 +33,9 @@
     <table id="table" class="table table-striped table-hover table-sm">
         <thead class="thead-dark">
             <tr>
-                <th>
+                <!-- <th>
                     Trending
-                </th>
+                </th> -->
                 <th>
                     Title
                 </th>
@@ -44,16 +44,7 @@
                 </th>
             </tr>
         </thead>
-        <tbody>
-            {% for book in books_list %}
-            <tr class="table-row" data-desc="{{ book.description }}" data-thread="{% url 'books:thread' book.id %}"
-                style="cursor:pointer;">
-                <th scope="row">{{ forloop.counter }}</th>
-                <td>{{ book.title }}</td>
-                <td>{{ book.author }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
+        <tbody></tbody>
     </table>
 </div>
 
@@ -67,7 +58,7 @@
                         <p>
                             ${desc}
                         </p>
-                        <form class="text-right" action="${thread_url}">
+                        <form action="${thread_url}">
                             <button class="btn btn-outline-dark">
                                 <span>Go to conversation</span>
                             </button>
@@ -81,6 +72,9 @@
         var openRow;
         // init datatable
         var table = $('#table').DataTable({
+            "processing": true,
+            "serverSide": true,
+            "ajax": "{% url 'books:search' %}",
             "lengthChange": false,
             "ordering": false,
             "dom": "<'row'<'col-sm-12 col-md-6'l><'col-sm-12 col-md-6'>>" +
@@ -89,27 +83,23 @@
             "language": {
                 "zeroRecords": "No matching books",
             },
+            "columns": [
+                { "data": "title" },
+                { "data": "author" },
+            ],
         });
         // table pagination
-        $('#next-page').on('click', function () {
-            table.page('next').draw('page');
-        });
-        $('#prev-page').on('click', function () {
-            table.page('previous').draw('page');
-        });
-        // enable datatables custom searchbar. If there is a query, show the not found? button
-        $('#search-bar').on('keyup', function () {
-            table.search($(this).val()).draw();
-            if ($(this).val() == '') {
-                $('#not-found-prompt').fadeOut();
-            } else {
-                $('#not-found-prompt').fadeIn();
-            }
-        });
+        // $('#next-page').on('click', function () {
+        //     table.page('next').draw('page');
+        // });
+        // $('#prev-page').on('click', function () {
+        //     table.page('previous').draw('page');
+        // });
+        
         // stop search bar from submitting on enter press
         $('#search-bar').keydown(function (e) {
             if (e.keyCode == 13) {
-                e.preventDefault();
+                table.search($('#search-bar').val()).draw();
             }
         });
         // handle expandable table row descriptions
