display entire text of comment

--- a/app/books/templates/books/thread_comment_node.html
+++ b/app/books/templates/books/thread_comment_node.html
@@ -69,7 +69,7 @@
 
         <!-- comment body -->
         <div class="card-body">
-            <p>{{ comment }}</p>
+            <p>{{ comment.text }}</p>
         </div>
 
         <!-- child comments -->
