show entire parent comment when replying

--- a/app/books/templates/books/create_comment.html
+++ b/app/books/templates/books/create_comment.html
@@ -27,7 +27,7 @@
         </div>
         <!-- card body -->
         <div class="card-body">
-            <p>{{ parent_comment }}</p>
+            <p>{{ parent_comment.text }}</p>
         </div>
         <!-- reply -->
         <div>
