improve accounts/likes headers

--- a/app/accounts/templates/accounts/likes.html
+++ b/app/accounts/templates/accounts/likes.html
@@ -18,7 +18,7 @@
                         </button>
                     </div>
                     <div class="col-sm">
-                        <h3>{{ comment.book.title }} <small>by</small> {{ comment.book.author }}</h3>
+                        <h3>{{ comment.author }} <small>about</small> {{ comment.book.title }} <small>by</small> {{ comment.book.author }}</h3>
                     </div>
                 </div>
             </div>
